src/objects/KS_Proyectos__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Proyectos de iluminación y sistemas de control</description>
    <fields>
        <fullName>KS_Cliente_solicitante__c</fullName>
        <formula>KS_Oferta__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente solicitante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Comentarios__c</fullName>
        <label>Comentarios</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KS_Familia_subserie__c</fullName>
        <label>Familia subserie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Subserie</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Fecha_prevista_de_entrega_a_cliente__c</fullName>
        <label>Fecha prevista de entrega a cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Formato__c</fullName>
        <label>Formato</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KS_Horas_acumuladas__c</fullName>
        <label>Horas acumuladas</label>
        <summarizedField>KS_seguimiento_proyecto__c.KS_Horas__c</summarizedField>
        <summaryForeignKey>KS_seguimiento_proyecto__c.KS_Proyecto__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obra</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>KS_Obra__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Oportunidades</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>Proyectos</relationshipLabel>
        <relationshipName>Proyectos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Oferta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oferta</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proyectos</relationshipLabel>
        <relationshipName>Proyectos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Revisiones__c</fullName>
        <label>Revisiones</label>
        <summaryForeignKey>KS_seguimiento_proyecto__c.KS_Proyecto__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_Segmento__c</fullName>
        <formula>TEXT(KS_Obra__r.KS_Segmento__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segmento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Solicitante__c</fullName>
        <formula>CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solicitante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_proyecto__c</fullName>
        <label>Tipo de proyecto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_de_proyecto</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_id_Obra__c</fullName>
        <formula>KS_Obra__r.KS_Id_Obra__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>id Obra</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Asignado_a__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>el técnico a quien se le asigna</description>
        <label>Asignado a</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proyectos</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Proyecto</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>id proyectos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proyectos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>